# vote-sdk

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  Dockerfile  Dockerfile.join-test  Makefile  README.md  SETUP_GENESIS.md  SETUP_JOIN.md  SETUP_NULLIFIER_SERVICE.md  ceremony.sh  clean-validator.sh  dkg.md  genesis.json  go.mod  go.sum  join-dev.sh  join.sh  mise.toml  nullifier.sh
.cursor/rules/: shielded-vote-book.mdc  sync-design.mdc  sync-zkp.mdc
.github/workflows/: audit.yml  caddy-deploy.yml  ci.yml  fund-validator.yml  imt-integration.yml  nullifier-ingest-deploy.yml  nullifier-ingest-resync.yml  release.yml  sdk-chain-deploy.yml  sdk-chain-reset.yml  test-join.yml  vc-van-realism.yml  vote-commitment-tree.yml
.mise/tasks/: status
api/: codec.go  codec_test.go  handler.go  query_handler.go  snapshot.go  tx_wrapper.go
app/: abci_bench_test.go  abci_test.go  ante.go  ante_ceremony.go  ante_test.go  ante_whitelist.go  ante_whitelist_test.go  app.go  app_config.go  ceremony_deal_test.go  ceremony_test.go  decode.go  export.go  export_test.go  genesis.go  liveness_test.go  prepare_proposal.go  prepare_proposal_ceremony.go  prepare_proposal_ceremony_unit_test.go  prepare_proposal_partial_decrypt.go  prepare_proposal_partial_decrypt_test.go  prepare_proposal_tally_threshold_test.go  process_proposal.go  process_proposal_test.go  threshold_tally_e2e_test.go  tree_stress_test.go
circuits/: Cargo.toml
circuits/include/: shielded_vote_circuits.h  zally_circuits.h
circuits/src/: ffi.rs  lib.rs  toy.rs  votetree.rs
circuits/tests/: generate_fixtures.rs
cmd/manifest-signer/: canonical.go  canonical_test.go  decode.go  keygen.go  keys.go  main.go  sign_checkpoint.go  sign_round.go  types.go  verify.go
cmd/svoted/: main.go
cmd/zallyd/: main.go
cmd/zvoted/: main.go
contrib-notifier/: .env.example
crypto/ecies/: ecies.go  ecies_test.go  serialize.go
crypto/elgamal/: bsgs.go  bsgs_test.go  curvey_correctness_test.go  curvey_smoke_test.go  dleq.go  dleq_test.go  doc.go  elgamal.go  elgamal_test.go  serialize.go  serialize_test.go
crypto/redpallas/: verify.go  verify_ffi.go
crypto/shamir/: README.md  feldman.go  feldman_test.go  partial_decrypt_test.go  shamir.go  shamir_test.go
crypto/votetree/: README.md  kv_callbacks.go  mem_kv_test.go  tree_ffi.go  tree_ffi_test.go  tree_kv_handle.go  verify.go
crypto/zkp/: verify.go
deploy/: Caddyfile
deploy/caddy/: pir.Caddyfile  primary.Caddyfile  secondary.Caddyfile
deploy/explorer/: svote.json
deploy/systemd/: nullifier-query-server.service  svoted-chain.service
docker/: Dockerfile  entrypoint.sh  generate-compose.sh  test-lifecycle.sh
docker/ping-pub/: Dockerfile  svote.json
docs/: blocktimes.md  config.md  cosmos-sdk-messages-spec.md  deploy-setup.md  external-api-audit.md  handoff-zashi-helper-server.md  infra.md  mobile-voting-api.md  mobile-voting-architecture.md  nullifier-query-server.service  observability.md  params.md  pir-tree-spec.md  production-setup.md  proposals-and-tally.md  session-status-lifecycle.md  shielded-vote-book-index.md  suggested-review-details.md  suggested-review-scope.md  svoted-archive.service  svoted-val1.service  svoted-val2.service  svoted-val3.service  svoted.service  testing.md  tss-ceremony-math.md  tss-ceremony.md  validator-setup.md  vc-van-testing.md  voting-session-state-machine.md  zallyd.service
docs/operations/: join-validator.md
docs/runbooks/: genesis-setup.md  join-chain.md  key-rotation.md  (+2 more)
e2e-tests/: Cargo.toml
e2e-tests/src/: api.rs  fixtures.rs  lib.rs  payloads.rs  setup.rs
e2e-tests/tests/: ceremony_flow.rs  create_round_for_zashi.rs  generate_fixtures.rs  round_activation.rs  sync_stress.rs  voter_throughput.rs  voting_flow.rs  voting_flow_librustvoting.rs  voting_flow_zcash_voting.rs
helper-server/: Cargo.toml
imt-tree/: README.md
internal/: README.md
librustvoting/: Cargo.toml
nf-ingest/: Cargo.toml
nf-server/: Cargo.toml
nullifier-ingest/: Makefile
nullifier-ingest/imt-tree/: Cargo.toml  README.md
nullifier-ingest/imt-tree/src/: hasher.rs  lib.rs  tree.rs
nullifier-ingest/imt-tree/src/tree/: mod.rs  nullifier_tree.rs  tests.rs
nullifier-ingest/imt-tree/tests/: imt_circuit_integration.rs
nullifier-ingest/service/: Cargo.toml  Makefile
nullifier-ingest/service/src/: file_store.rs  lib.rs  sync_nullifiers.rs  tree_db.rs
nullifier-ingest/service/tests/: api_integration.rs
pir/client/: Cargo.toml
pir/test/: Cargo.toml
pir/types/: Cargo.toml
pir/types/src/: tier0.rs  tier2.rs
plans/: 08_msgsubmittally_implementation_44546920.plan.md  0_init_plan.md  10_elgamal_pallas_baseline.plan.md  13_vote_tree_sdk_integration_901751c6.plan.md  18_threshold_decryption_design_d3f0020c.plan.md  dkg_ceremony_design_8bacb3fb.plan.md
proto/: buf.gen.yaml
scripts/: _tree_test_lib.sh  _vote_manager_keys_lib.sh  ai-audit.sh  healthcheck.sh  init-archive.sh  init.sh  init_multi.sh  install-release.sh  join-loop.sh  reset-archive.sh  reset-join.sh  reset-snapshot.sh  svoted-wrapper.sh  test-join-docker.sh  test_deterministic_keys.sh  test_join_ci.sh  test_svoted_wrapper.sh  test_tree_crash_recovery.sh  test_tree_soak.sh  test_validator_restart.sh
sdk/: Makefile  README.md  go.mod
sentry/: sentry.go  sentry_test.go
terraform/: .gitignore  cloudflare.tf  digitalocean.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
testutil/: app.go  fixtures.go  rawtx.go
ui/: .env.example  README.md  vite.config.ts
vote-commitment-tree/: Cargo.toml  README.md
vote-commitment-tree-client/: Cargo.toml
vote-nullifier-pir/: .gitignore  CONTRIBUTING.md  Makefile  README.md
vote-nullifier-pir/pir/export/: Cargo.toml
vote-nullifier-pir/pir/export/src/: lib.rs  main.rs  tier0.rs  tier1.rs
vote-nullifier-pir/pir/export/tests/: round_trip.rs
voting-circuits/: Cargo.toml
zashi-ios/: secant-distrib-Info.plist  secant-mainnet.entitlements  zashi-internal-Info.plist
zcash-swift-wallet-sdk/: CHANGELOG.md  Package.swift
zcash-voting-ffi/: README.md
zodl-ios/: CHANGELOG.md
(+485 files in other folders)
