[package]
name = "shielded-vote-circuits"
version = "0.1.0"
edition = "2021"
description = "Halo2 ZKP circuits and FFI verification for the Shielded-Vote chain"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
halo2_proofs = { version = "0.3", features = ["batch"] }
pasta_curves = "0.5"
group = "0.13"
rand_core = { version = "0.6", features = ["getrandom"] }
reddsa = { version = "0.5", default-features = false }
vote-commitment-tree = "0.1.0"
orchard = { version = "0.13", features = ["unstable-voting-circuits"] }
voting-circuits = { version = "0.3.0", features = ["share-reveal"] }
imt-tree = { git = "https://github.com/valargroup/vote-nullifier-pir.git" }
incrementalmerkletree = "0.8"
hex = "0.4"
halo2_gadgets = "0.4"

[dependencies.ff]
version = "0.13"

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
reddsa = { version = "0.5", features = ["std"] }
blake2b_simd = "1"
serde_json = "1"

[workspace]

# Redirect orchard / voting-circuits / vote-commitment-tree to the migration
# branches so this crate, the inner zcash_voting crate, and the e2e-tests crate
# all converge on a single set of source revisions. Mirrors the patches in
# `zcash_voting/Cargo.toml` and `e2e-tests/Cargo.toml`.
[patch.crates-io]
orchard = { git = "https://github.com/zcash/orchard.git", rev = "2d88d48d1d86a1b49c3cee00d67dbbfd57f89d0d" }
voting-circuits = { git = "https://github.com/valargroup/voting-circuits.git", rev = "70497dab0b3c676f5e9fbe4407d14b21e898eaad" }
vote-commitment-tree = { git = "https://github.com/valargroup/zcash_voting.git", rev = "ea9fabef3597355631aecbe872a4e10733eb361b" }
