[package]
name = "shielded-vote-circuits"
version = "0.1.0"
edition = "2021"
description = "Halo2 ZKP circuits and FFI verification for the Shielded-Vote chain"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
halo2_proofs = { version = "0.3", features = ["batch"] }
pasta_curves = "0.5"
group = "0.13"
rand_core = { version = "0.6", features = ["getrandom"] }
reddsa = { version = "0.5", default-features = false }
vote-commitment-tree = "0.1.0"
orchard = { version = "=0.13.1", features = ["unstable-voting-circuits"] }
voting-circuits = { version = "0.3.1", features = ["share-reveal"] }
imt-tree = { git = "https://github.com/valargroup/vote-nullifier-pir.git" }
incrementalmerkletree = "0.8"
hex = "0.4"
halo2_gadgets = "0.4"

[dependencies.ff]
version = "0.13"

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
reddsa = { version = "0.5", features = ["std"] }
blake2b_simd = "1"
serde_json = "1"

[workspace]

# Redirect unreleased zcash_voting crates so this crate and the e2e-tests crate
# converge on the same source revision. Orchard and voting-circuits resolve
# from crates.io.
[patch.crates-io]
vote-commitment-tree = { git = "https://github.com/valargroup/zcash_voting.git", rev = "116dfaf7fe505a1b7c781b1baf929dca43417c65" }
