[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"
description = "Rust E2E API tests for Shielded-Vote voting flow (replaces TypeScript suite)"

[dependencies]
# Same-repo path dep (circuits/ is a sibling directory)
shielded-vote-circuits = { path = "../circuits" }

orchard = { version = "=0.13.1", features = ["unstable-voting-circuits"] }
voting-circuits = { version = "0.3.1", features = ["share-reveal"] }
vote-commitment-tree = "0.1.1"
vote-commitment-tree-client = "0.1.1"
zcash_voting = "0.1.1"

# HTTP and JSON
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encoding
base64 = "0.22"
hex = "0.4"

# Round ID derivation (Poseidon hash)
halo2_gadgets = "0.4"

# Blake2b (still used for sighash in e2e setup)
blake2b_simd = "1"

# ElGamal on Pallas
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"

# ECIES encryption (matching Go's sdk/crypto/ecies)
sha2 = "0.10"
chacha20poly1305 = "0.10"

# RNG
rand = "0.8"
rand_core = "0.6"

# Delegation setup (Merkle tree)
incrementalmerkletree = "0.8"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"

[workspace]
