[package]
name = "nullifier-service"
version = "0.1.0"
edition = "2021"

[dependencies]
imt-tree = { path = "../imt-tree" }
anyhow = "1.0"
hex = "0.4"
ff = "0.13"
pasta_curves = "0.5"
rayon = "1"
prost = "0.10.3"
tonic = { version = "0.7.2", features = ["tls", "tls-roots"] }
tokio = { version = "1.6", features = ["rt-multi-thread", "tokio-macros", "macros"] }
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
