[package]
name = "pir-types"
version = "0.1.0"
edition = "2021"

[features]
default = []
reader = ["dep:pasta_curves", "dep:ff", "dep:anyhow", "dep:imt-tree"]

[dependencies]
serde = { version = "1", features = ["derive"] }
pasta_curves = { version = "0.5", optional = true }
ff = { version = "0.13", optional = true }
anyhow = { version = "1.0", optional = true }
imt-tree = { path = "../../imt-tree", optional = true }
