[package]
name = "pir-export"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rand = "0.8"

[features]
default = []
cli = ["dep:nf-ingest"]

[dependencies]
pir-types = { path = "../types", features = ["reader"] }
imt-tree = { path = "../../imt-tree" }
nf-ingest = { path = "../../nf-ingest", optional = true }
anyhow = "1.0"
hex = "0.4"
ff = "0.13"
pasta_curves = "0.5"
rayon = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"

[[bin]]
name = "pir-export"
required-features = ["cli"]
